5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1596_1014.log
== TEST (2019-04-02 11:06:52) 
-- CODE:
valor=float(input("Qual o valor total?"))
lucrodebili=30/100
prrint(round(valor*lucrodebili))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    prrint(round(valor*lucrodebili))
NameError: name 'prrint' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 11:07:24) 
-- CODE:
valor=float(input("Qual o valor total?"))
lucrodebili=30/100
print(round(valor*lucrodebili))
-- OUTPUT:
210
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:49:59) 
-- CODE:
totaldevendas=float(input("qual o valor de vendas?"))
lucro=totaldevendas*30/100
print=(lucro)
-- EXECUTION TIME:
0.186905
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:50:06) 
-- CODE:
totaldevendas=float(input("qual o valor de vendas?"))
lucro=totaldevendas*30/100
print=(lucro)
-- EXECUTION TIME:
0.162471
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:50:08) 
-- CODE:
totaldevendas=float(input("qual o valor de vendas?"))
lucro=totaldevendas*30/100
print=(lucro)
-- EXECUTION TIME:
0.197287
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:50:51) 
-- CODE:
totaldevendas=float(input("qual o valor de vendas?"))
lucro=totaldevendas*30/100
print(lucro)
-- EXECUTION TIME:
0.195944
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
